# repomanage

./: .gitignore  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
publisher/: errors.py  manager.py  publisher.py  version.py
publisher/tests/: test_manager.py  test_publisher.py
