[metadata]
name = publisher
version = 0.0.1
summary = Command line interface for publisher.
author = Sergiy Kulanov
author-email = sergey@kulanov.org.ua
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Internet
    Topic :: Packaging
    Topic :: Software Development :: Testing

[files]
packages =
    publisher

[entry_points]
console_scripts =
    publisher = publisher.publisher:main

[wheel]
python-tag = py2
