[metadata]
name = publisher
version = 0.0.1
summary = Command line interface for publisher.
author = Sergiy Kulanov
author-email = sergey@kulanov.org.ua
home-page = hhttps://github.com/SergK/repomanage
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Internet
    Topic :: Packaging
    Topic :: Software Development :: Testing

[files]
packages =
    publisher

[entry_points]
console_scripts =
    publisher = publisher.publisher:main

[pbr]
autodoc_index_modules = True
# this variable is needed to avoid including files
# from other subprojects in this repository
skip_git_sdist = True
skip_authors = True
skip_changelog = True

[global]
setup-hooks =
    pbr.hooks.setup_hook
    publisher.hooks.setup_hook

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1
